--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,11 @@ dependencies {
     //协程
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1'
 
+    implementation 'pub.devrel:easypermissions:3.0.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.jayway.jsonpath:json-path:2.4.0'
+    implementation 'org.jsoup:jsoup:1.12.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
