--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,8 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+RELEASE_STORE_FILE=..\\Test.jks
+RELEASE_KEY_PASSWORD=20190604
+RELEASE_KEY_ALIAS=test
+RELEASE_STORE_PASSWORD=20190604
