--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".help.permission.PermissionActivity"
                   android:theme="@style/Activity.Permission"/>
         <activity android:name=".ui.config.ConfigActivity"/>
+        <activity android:name=".ui.sourceedit.SourceEditActivity"/>
     </application>
 
 </manifest>
