--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,6 +126,9 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
+    //二维码
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
+
     //颜色选择
     implementation 'com.jaredrummler:colorpicker:1.1.0'
 
