--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         <activity android:name=".ui.sourceedit.SourceEditActivity"/>
         <activity android:name=".ui.bookshelf.BookshelfActivity" />
         <activity android:name=".ui.qrcode.QrCodeActivity" />
+        <activity android:name=".ui.about.DonateActivity" />
     </application>
 
 </manifest>
