--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".ui.qrcode.QrCodeActivity" />
         <activity android:name=".ui.about.DonateActivity" />
         <activity android:name=".ui.bookinfo.BookInfoActivity" />
+        <activity android:name=".ui.bookinfo.BookInfoEditActivity" />
     </application>
 
 </manifest>
