--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,14 +27,14 @@
             android:theme="@style/AppTheme.Light"
             tools:ignore="AllowBackup,GoogleAppIndexingWarning,UnusedAttribute">
         <activity
-                android:name=".ui.main.MainActivity"
-                android:label="@string/app_name">
+            android:name=".ui.welcome.WelcomeActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.main.MainActivity" />
         <activity android:name=".ui.replacerule.ReplaceRuleActivity"/>
         <activity android:name=".ui.search.SearchActivity"/>
         <activity android:name=".ui.about.AboutActivity"/>
@@ -47,6 +47,7 @@
         <activity android:name=".ui.about.DonateActivity" />
         <activity android:name=".ui.bookinfo.BookInfoActivity" />
         <activity android:name=".ui.bookinfo.BookInfoEditActivity" />
+
     </application>
 
 </manifest>
