--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.preference:preference:1.1.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'com.google.android:flexbox:1.1.0'
 
     //lifecycle
@@ -116,8 +116,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jsoup:jsoup:1.12.1'
     implementation 'cn.wanghaomiao:JsoupXpath:2.3.2'
-    // implementation 'org.apache.commons:commons-text:1.6'
-    // Default json parser for jsonpath
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
 
     //JS
@@ -137,7 +135,7 @@ dependencies {
     implementation 'com.jaredrummler:colorpicker:1.1.0'
 
     //对话框
-    implementation 'com.afollestad.material-dialogs:core:3.0.0-rc3'
-    implementation 'com.afollestad.material-dialogs:input:3.0.0-rc3'
-    implementation 'com.afollestad.material-dialogs:files:3.0.0-rc3'
+    implementation 'com.afollestad.material-dialogs:core:3.1.0'
+    implementation 'com.afollestad.material-dialogs:input:3.1.0'
+    implementation 'com.afollestad.material-dialogs:files:3.1.0'
 }
