--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.preference:preference:1.1.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'com.google.android:flexbox:1.1.0'
 
@@ -108,7 +109,7 @@ dependencies {
     implementation 'com.jeremyliao:live-event-bus-x:1.4.4'
 
     //协程
-    def coroutines_version = '1.2.1'
+    def coroutines_version = '1.2.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
@@ -138,4 +139,5 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:3.1.0'
     implementation 'com.afollestad.material-dialogs:input:3.1.0'
     implementation 'com.afollestad.material-dialogs:files:3.1.0'
+
 }
