--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".ui.booksource.BookSourceActivity" />
         <activity android:name=".ui.readbook.ReadBookActivity" />
         <activity android:name=".ui.chapterlist.ChapterListActivity" />
+        <activity android:name=".ui.readrss.ReadRssActivity" />
 
         <service android:name=".service.CheckSourceService" />
         <service android:name=".service.DownloadService" />
