--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
         <service android:name=".service.UpdateService" />
         <service android:name=".service.WebService" />
 
-        <receiver android:name=".receiver.MediaButtonIntentReceiver">
+        <receiver android:name=".receiver.MediaButtonReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
