--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
         <activity android:name=".ui.qrcode.QrCodeActivity" />
         <activity android:name=".ui.about.DonateActivity" />
         <activity android:name=".ui.bookinfo.BookInfoActivity" />
-        <activity android:name=".ui.bookinfo.BookInfoEditActivity" />
+        <activity android:name=".ui.bookinfo.edit.BookInfoEditActivity" />
         <activity android:name=".ui.sourcedebug.SourceDebugActivity" />
         <activity android:name=".ui.booksource.BookSourceActivity" />
         <activity android:name=".ui.readbook.ReadBookActivity" />
