--- a/app/src/main/assets/readConfig.json
+++ b/app/src/main/assets/readConfig.json
@@ -17,7 +17,7 @@
     "bgStr": "#C6BAA1",
     "bgType": 0,
     "darkStatusIcon": true,
-    "textColor": "#3E3D3B",
+    "textColor": "#5E432E",
     "textSize": 16,
     "letterSpacing": 0,
     "lineSpacingExtra": 15,
@@ -31,7 +31,7 @@
     "bgStr": "#E1F1DA",
     "bgType": 0,
     "darkStatusIcon": true,
-    "textColor": "#3E3D3B",
+    "textColor": "#22482C",
     "textSize": 16,
     "letterSpacing": 0,
     "lineSpacingExtra": 15,
@@ -45,7 +45,7 @@
     "bgStr": "#015A86",
     "bgType": 0,
     "darkStatusIcon": false,
-    "textColor": "#3E3D3B",
+    "textColor": "#FFFFFF",
     "textSize": 16,
     "letterSpacing": 0,
     "lineSpacingExtra": 15,
@@ -56,10 +56,10 @@
     "paddingBottom": 0
   },
   {
-    "bgStr": "#808080",
+    "bgStr": "#000000",
     "bgType": 0,
     "darkStatusIcon": false,
-    "textColor": "#3E3D3B",
+    "textColor": "#808080",
     "textSize": 16,
     "letterSpacing": 0,
     "lineSpacingExtra": 15,
