--- a/app/src/main/assets/readConfig.json
+++ b/app/src/main/assets/readConfig.json
@@ -59,7 +59,7 @@
     "bgStr": "#000000",
     "bgType": 0,
     "darkStatusIcon": false,
-    "textColor": "#808080",
+    "textColor": "#adadad",
     "textSize": 16,
     "letterSpacing": 0,
     "lineSpacingExtra": 15,
