--- a/app/src/main/assets/readConfig.json
+++ b/app/src/main/assets/readConfig.json
@@ -3,14 +3,14 @@
     "bgStr": "bg1.jpg",
     "bgType": 1,
     "darkStatusIcon": true,
-    "textColor": "#3E3D3B",
-    "textSize": 16,
+    "textColor": "#5E432E",
+    "textSize": 20,
     "letterSpacing": 0,
-    "lineSpacingExtra": 15,
-    "lineSpacingMultiplier": 3,
+    "lineSpacingExtra": 10,
+    "lineSpacingMultiplier": 1,
     "paddingLeft": 16,
     "paddingRight": 16,
-    "paddingTop": 0,
+    "paddingTop": 10,
     "paddingBottom": 0
   },
   {
@@ -18,10 +18,10 @@
     "bgType": 0,
     "darkStatusIcon": true,
     "textColor": "#5E432E",
-    "textSize": 16,
+    "textSize": 20,
     "letterSpacing": 0,
-    "lineSpacingExtra": 15,
-    "lineSpacingMultiplier": 3,
+    "lineSpacingExtra": 10,
+    "lineSpacingMultiplier": 1,
     "paddingLeft": 16,
     "paddingRight": 16,
     "paddingTop": 0,
@@ -32,10 +32,10 @@
     "bgType": 0,
     "darkStatusIcon": true,
     "textColor": "#22482C",
-    "textSize": 16,
+    "textSize": 20,
     "letterSpacing": 0,
-    "lineSpacingExtra": 15,
-    "lineSpacingMultiplier": 3,
+    "lineSpacingExtra": 10,
+    "lineSpacingMultiplier": 1,
     "paddingLeft": 16,
     "paddingRight": 16,
     "paddingTop": 0,
@@ -46,10 +46,10 @@
     "bgType": 0,
     "darkStatusIcon": false,
     "textColor": "#FFFFFF",
-    "textSize": 16,
+    "textSize": 20,
     "letterSpacing": 0,
-    "lineSpacingExtra": 15,
-    "lineSpacingMultiplier": 3,
+    "lineSpacingExtra": 10,
+    "lineSpacingMultiplier": 1,
     "paddingLeft": 16,
     "paddingRight": 16,
     "paddingTop": 0,
@@ -60,10 +60,10 @@
     "bgType": 0,
     "darkStatusIcon": false,
     "textColor": "#adadad",
-    "textSize": 16,
+    "textSize": 20,
     "letterSpacing": 0,
-    "lineSpacingExtra": 15,
-    "lineSpacingMultiplier": 3,
+    "lineSpacingExtra": 10,
+    "lineSpacingMultiplier": 1,
     "paddingLeft": 16,
     "paddingRight": 16,
     "paddingTop": 0,
