--- a/app/src/main/assets/readConfig.json
+++ b/app/src/main/assets/readConfig.json
@@ -14,24 +14,10 @@
     "paddingBottom": 0
   },
   {
-    "bgStr": "羊皮纸2.jpg",
+    "bgStr": "新羊皮纸.jpg",
     "bgType": 1,
     "darkStatusIcon": true,
     "textColor": "#5E432E",
-    "textSize": 22,
-    "letterSpacing": 0,
-    "lineSpacingExtra": 10,
-    "lineSpacingMultiplier": 1.2,
-    "paddingLeft": 16,
-    "paddingRight": 16,
-    "paddingTop": 0,
-    "paddingBottom": 0
-  },
-  {
-    "bgStr": "#E1F1DA",
-    "bgType": 0,
-    "darkStatusIcon": true,
-    "textColor": "#22482C",
     "textSize": 22,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
@@ -46,6 +32,20 @@
     "bgType": 0,
     "darkStatusIcon": false,
     "textColor": "#FFFFFF",
+    "textSize": 22,
+    "letterSpacing": 0,
+    "lineSpacingExtra": 10,
+    "lineSpacingMultiplier": 1.2,
+    "paddingLeft": 16,
+    "paddingRight": 16,
+    "paddingTop": 0,
+    "paddingBottom": 0
+  },
+  {
+    "bgStr": "宁静夜色",
+    "bgType": 0,
+    "darkStatusIcon": false,
+    "textColor": "#adadad",
     "textSize": 22,
     "letterSpacing": 0,
     "lineSpacingExtra": 10,
