--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,7 @@
         <activity android:name=".ui.chapterlist.ChapterListActivity" />
         <activity android:name=".ui.readrss.ReadRssActivity" />
         <activity android:name=".ui.audio.AudioPlayActivity" />
+        <activity android:name=".ui.replacerule.ReplaceEditActivity" />
 
         <service android:name=".service.CheckSourceService" />
         <service android:name=".service.DownloadService" />
