--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,17 +82,17 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
     //androidX
-    implementation 'androidx.core:core-ktx:1.2.0-alpha03'
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
-    implementation 'androidx.preference:preference:1.1.0-rc01'
+    implementation 'androidx.core:core-ktx:1.2.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.media:media:1.1.0-rc01'
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation 'androidx.media:media:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'com.google.android:flexbox:1.1.0'
 
     //lifecycle
-    def lifecycle_version = '2.0.0'
+    def lifecycle_version = '2.1.0'
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
 
