--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: "de.timfreiheit.resourceplaceholders"
 
 androidExtensions {
     experimental = true
@@ -66,6 +67,9 @@ android {
     }
 }
 
+resourcePlaceholders {
+    files = ['xml/shortcuts.xml']
+}
 
 kapt {
     arguments {
