--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
 
         <service android:name=".service.CheckSourceService" />
         <service android:name=".service.DownloadService" />
-        <service android:name=".service.ReadAloudService" />
+        <service android:name=".service.TTSReadAloudService" />
         <service android:name=".service.UpdateService" />
         <service android:name=".service.WebService" />
 
