--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,7 @@
         <service android:name=".service.TTSReadAloudService" />
         <service android:name=".service.UpdateService" />
         <service android:name=".service.WebService" />
+        <service android:name=".service.HttpReadAloudService" />
 
         <receiver android:name=".receiver.MediaButtonReceiver">
             <intent-filter>
