--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,10 +88,11 @@ dependencies {
     //androidX
     implementation 'androidx.core:core-ktx:1.2.0-alpha04'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.media:media:1.1.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
-    implementation 'androidx.media:media:1.1.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-beta04'
     implementation 'com.google.android.material:material:1.1.0-alpha10'
     implementation 'com.google.android:flexbox:1.1.0'
 
