--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,15 @@
         <activity android:name=".ui.book.info.BookInfoActivity" />
         <activity android:name="io.legado.app.ui.book.info.edit.BookInfoEditActivity" />
         <activity android:name=".ui.book.source.debug.SourceDebugActivity" />
-        <activity android:name=".ui.book.source.manage.BookSourceActivity" />
+        <activity android:name=".ui.book.source.manage.BookSourceActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <data android:scheme="yuedu" android:host="booksource"/>
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.chapterlist.ChapterListActivity" />
         <activity android:name=".ui.rss.read.ReadRssActivity" />
         <activity android:name=".ui.audio.AudioPlayActivity" />
